feature: add login and signup functionality for User and Seller

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,18 @@
-spring.application.name=ecommerce-multivendor
-spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:postgresql://localhost:5432/ecommerce_multivendor
-spring.datasource.username=postgres
-spring.datasource.password=root
+spring.application.name = ecommerce-multivendor
+
+# Spring Jpa
+spring.jpa.hibernate.ddl-auto = update
+spring.datasource.url = jdbc:postgresql://localhost:5432/ecommerce_multivendor
+spring.datasource.username = postgres
+spring.datasource.password = root
+
+# Spring Mail
+spring.mail.host = smtp.gmail.com
+spring.mail.port = 587
+spring.mail.username = mrinalaceb@gmail.com
+spring.mail.password = noff skiz gspc nwel
+spring.mail.properties.mail.smtp.auth = true
+spring.mail.properties.mail.smtp.starttls.enable = true
+
+server.port = 8081
 
